--- a/c8_index.html
+++ b/c8_index.html
@@ -88,7 +88,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Zoubair Belfki | Novemeber 21, 2024</p>
 	</footer>
 </body>
 </html>
